# electocracy

electocracy-rest/: Cargo.toml  Dockerfile
electocracy-rest/migrations/2023-05-28-101137_create_polls/: down.sql  up.sql
electocracy-rest/migrations/2023-06-03-104206_create_comments/: up.sql
electocracy-rest/prompts/: generate_title.txt  summarize.txt
electocracy-rest/src/: gpt_client.rs  helpers.rs  lib.rs  main.rs  schema.rs  services.rs  state.rs
electocracy-rest/src/models/: backend.rs  frontend.rs  gpt.rs  mod.rs
electocracy-ui/: README.md  pubspec.yaml
electocracy-ui/android/app/: build.gradle
electocracy-ui/android/app/src/main/: AndroidManifest.xml
electocracy-ui/android/app/src/profile/: AndroidManifest.xml
electocracy-ui/ios/Runner/: Info.plist
electocracy-ui/ios/Runner.xcodeproj/: project.pbxproj
electocracy-ui/lib/: main.dart
electocracy-ui/lib/app/constants/: language.dart
electocracy-ui/lib/app/helpers/: helpers.dart
electocracy-ui/lib/app/models/: comment.dart  content_request.dart  create_comment_request.dart  create_poll_request.dart  poll.dart  summary.dart  title.dart
electocracy-ui/lib/app/routes/: routes.dart
electocracy-ui/lib/app/services/: electocracy_rest_api.dart
electocracy-ui/lib/app/views/: create_poll_view.dart  create_post_view.dart  not_found_view.dart  poll_list_view.dart  poll_view.dart  summary_poll_view.dart  summary_post_view.dart
electocracy-ui/lib/app/widgets/: future_elevated_button.dart
electocracy-ui/test/: widget_test.dart
(+1 files in other folders)
